<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/gradient"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:contentDescription="@string/image_of_lego_computer"
        android:scaleType="fitStart"
        android:src="@drawable/lego_computer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/navigation_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/brooklyn_technical_h_s"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</LinearLayout>