<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.myapplication.FirstFragment"
        android:label="@string/fragment_one"
        tools:layout="@layout/fragment_first" >
        <action
            android:id="@+id/navigate_first_to_second"
            app:destination="@id/secondFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/custom_fade_out"
            app:popEnterAnim="@anim/custom_slide_in_left"
            app:popExitAnim="@anim/custom_slide_out_right" />
        <action
            android:id="@+id/navigate_first_to_third"
            app:destination="@id/thirdFragment"
            app:enterAnim="@anim/custom_fade_in"
            app:exitAnim="@anim/custom_fade_out"
            app:popEnterAnim="@anim/custom_slide_in_left"
            app:popExitAnim="@anim/custom_slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.myapplication.SecondFragment"
        android:label="@string/fragment_two"
        tools:layout="@layout/fragment_second" >
        <action
            android:id="@+id/navigate_second_to_third"
            app:destination="@id/thirdFragment"
            app:enterAnim="@anim/custom_fade_in"
            app:exitAnim="@anim/custom_fade_out"
            app:popEnterAnim="@anim/custom_slide_in_left"
            app:popExitAnim="@anim/custom_slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.myapplication.ThirdFragment"
        android:label="@string/fragment_three"
        tools:layout="@layout/fragment_third" />
    <fragment
        android:id="@+id/fourthFragment"
        android:name="com.example.myapplication.FourthFragment"
        android:label="@string/fragment_four"
        tools:layout="@layout/fragment_fourth" />
    <action
        android:id="@+id/navigate_to_fourth_global"
        app:destination="@id/fourthFragment"
        app:enterAnim="@anim/custom_fade_in"
        app:exitAnim="@anim/custom_fade_out"
        app:popEnterAnim="@anim/custom_slide_in_left"
        app:popExitAnim="@anim/custom_slide_out_right" />

    <action
        android:id="@+id/navigate_to_first_global"
        app:destination="@id/firstFragment"
        app:enterAnim="@anim/custom_fade_in"
        app:exitAnim="@anim/custom_fade_out"
        app:popEnterAnim="@anim/custom_slide_in_left"
        app:popExitAnim="@anim/custom_slide_out_right" />
</navigation>